[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nodetool-anthropic"
version = "0.6.0"
description = "Nodetool Anthropic nodes"
readme = "README.md"
authors = ["Matthias Georgi <matti.georgi@gmail.com>"]
packages = [{ include = "nodetool", from = "src" }]
package-mode = true
include = ["src/nodetool/package-metadata/nodetool-anthropic.json"]
repository = "https://github.com/nodetool-ai/nodetool-anthropic"

[tool.poetry.dependencies]
python = "^3.10"
nodetool-core = { git = "https://github.com/nodetool-ai/nodetool-core.git", rev = "main" }
anthropic = "*"
